# coinbase-advanced

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: basic.rs  debug_products.rs  list_accounts.rs  market_data.rs  orders.rs  public_data.rs  websocket.rs  ws.rs
src/: client.rs  constants.rs  credentials.rs  error.rs  jwt.rs  lib.rs  rate_limit.rs
src/api/: accounts.rs  convert.rs  data.rs  fees.rs  futures.rs  mod.rs  order_builder.rs  orders.rs  payment_methods.rs  perpetuals.rs  portfolios.rs  products.rs  public.rs
src/models/: account.rs  common.rs  convert.rs  data.rs  fee.rs  futures.rs  mod.rs  order.rs  payment.rs  perpetuals.rs  portfolio.rs  product.rs
src/rest/: convert.rs  data.rs  fees.rs  futures.rs  mod.rs  order_builder.rs  orders.rs  payment_methods.rs  perpetuals.rs  portfolios.rs  products.rs  public.rs
src/websocket/: client.rs  mod.rs
src/ws/: channels.rs  client.rs  messages.rs  mod.rs
tests/: integration_tests.rs
