[package]
name = "coinbase-client"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
description = "A Rust client library for the Coinbase Advanced Trade API"
repository = "https://github.com/example/coinbase-client"
documentation = "https://docs.rs/coinbase-client"
readme = "README.md"
keywords = ["coinbase", "cryptocurrency", "trading", "api", "websocket"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[lib]
path = "src/lib.rs"
name = "coinbase_client"

[dependencies]
futures = "0.3.31"
futures-util = "0.3.31"
hex = "0.4"
reqwest = { version = "0.13.1", features = ["json"] }
ring = "0.17"
reqwest-middleware = "0.5.0"
reqwest-retry = "0.9.0"
reqwest-tracing = "0.6.0"
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["rt", "macros"] }
tokio-stream = "0.1.18"
tokio-tungstenite = "0.28.0"
tracing = "0.1.44"
url = "2.5.8"
urlencoding = "2.1.3"

[dev-dependencies]
dotenv = "0.15"
tokio = { version = "1.49", features = ["full"] }
tokio-test = "0.4"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wiremock = "0.6"
